--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "axios-offline",
-  "version": "1.5.2",
+  "version": "1.0.0",
   "description": "Store query and repeat",
-  "main": "./dist/main.js",
-  "repository": "github:jonkofee/axios-offline.git",
-  "homepage": "https://github.com/jonkofee/axios-offline",
-  "author": "jonkofee <jonkofee@icloud.com>",
+  "repository": "github.com:Appello-Pty-Ltd/axios-offline.git",
+  "homepage": "https://github.com/Appello-Pty-Ltd/axios-offline",
   "keywords": [
     "axios",
     "offline",
@@ -14,19 +12,44 @@
     "store"
   ],
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/react-nested-dropdown.min.js",
+  "types": "dist/index.d.ts",
+  "style": "dist/styles.css",
+  "type": "module",
+  "sideEffects": false,
+  "files": [
+    "dist",
+    "src",
+    "tsconfig.json"
+  ],
   "dependencies": {
-    "axios": "*",
+    "axios": "^1.3.0",
     "localforage": "^1.7.1"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "@babel/core": "^7.20.12",
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "babel-preset-env": "^1.7.0",
+    "prettier": "^2.8.3",
+    "rollup": "^3.12.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-ts": "^3.2.0",
+    "tsc-alias": "^1.8.2",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\""
+    "build": "rm -rf dist && rollup -c",
+    "build:watch": "rollup -c -w",
+    "prettier": "prettier --write src/**/*",
+    "prepublishOnly": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "babel": {
     "presets": [
