--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axios-offline",
+  "name": "@appello/axios-offline",
   "version": "1.0.0",
   "description": "Store query and repeat",
   "repository": "github.com:Appello-Pty-Ltd/axios-offline.git",
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "axios": "^1.3.0",
-    "localforage": "^1.7.1"
+    "localforage": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
