--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "unpkg": "dist/react-nested-dropdown.min.js",
+  "unpkg": "dist/index.min.js",
   "types": "dist/index.d.ts",
   "style": "dist/styles.css",
   "type": "module",
