--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
+    "axios": "^1.3.1",
     "babel-preset-env": "^1.7.0",
+    "localforage": "^1.10.0",
     "prettier": "^2.8.3",
     "rollup": "^3.12.1",
     "rollup-plugin-copy": "^3.4.0",
