--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "tsconfig.json"
   ],
   "peerDependencies": {
-    "axios": "^1.3.0",
+    "axios": "1.1.3",
     "localforage": "*"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.0",
-    "axios": "^1.3.1",
+    "axios": "1.1.3",
     "babel-preset-env": "^1.7.0",
     "localforage": "^1.10.0",
     "prettier": "^2.8.3",
@@ -59,5 +59,8 @@
     "presets": [
       "env"
     ]
+  },
+  "dependencies": {
+    "@appello/common": "^1.0.22"
   }
 }
