--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "tsconfig.json"
   ],
   "peerDependencies": {
-    "axios": "1.1.3",
-    "localforage": "*"
+    "axios": "1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -38,7 +37,6 @@
     "@rollup/plugin-terser": "^0.4.0",
     "axios": "1.1.3",
     "babel-preset-env": "^1.7.0",
-    "localforage": "^1.10.0",
     "prettier": "^2.8.3",
     "rollup": "^3.12.1",
     "rollup-plugin-copy": "^3.4.0",
